<?php

interface PaymentMethod
{
    function execute();
}